--- a/Needleman–Wunsch.ipynb
+++ b/Needleman–Wunsch.ipynb
@@ -2,16 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: redefinition of constant Main.GAP_PENALTY. This may fail, cause incorrect answers, or produce other errors.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -23,12 +16,14 @@
     }
    ],
    "source": [
-    "# Define the costs for match, mismatch, insertion, and deletion\n",
+    "# Solving of the sequence alingment problem using divide and conquer \n",
+    "## This function only calculates the best score, not the alignments \n",
+    "### Define the costs for match, mismatch, insertion, and deletion\n",
     "const MATCH_SCORE = 1\n",
     "const MISMATCH_PENALTY = -1\n",
     "const GAP_PENALTY = -1\n",
     "\n",
-    "# Recursive sequence alignment function\n",
+    "### Recursive sequence alignment function\n",
     "function sequence_alignment(seq1::String, seq2::String, m::Int, n::Int)\n",
     "    # Base cases\n",
     "    if m == 0\n",
@@ -55,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +64,8 @@
     }
    ],
    "source": [
+    "# Solving sequence alignment using dynamic programming approach\n",
+    "### implementation of needleman_wunsch algorithm\n",
     "function needleman_wunsch(seq1::String, seq2::String; match_score=1, mismatch_penalty=-1, gap_penalty=-1)\n",
     "    len1 = length(seq1)\n",
     "    len2 = length(seq2)\n",
@@ -123,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +134,7 @@
     }
    ],
    "source": [
+    "### Special print function to colorcode the match, mismatch and gaps\n",
     "using Crayons\n",
     "function print_alignment(align1::String, align2::String)\n",
     "    red = Crayon(foreground=:light_red)\n",
@@ -161,7 +159,7 @@
     "        else\n",
     "            print(magenta(string(align2[i])), \"  \")\n",
     "        end\n",
-    "        sleep(0.3)\n",
+    "        sleep(0.2)\n",
     "    end\n",
     "    println()\n",
     "end\n"
@@ -169,55 +167,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000011 seconds (30 allocations: 2.391 KiB)\n",
-      "Alignment 1: \n",
-      "\u001b[96mG\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mT\u001b[39m  \u001b[91m-\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mA\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[96mA\u001b[39m  \n",
-      "\u001b[96mG\u001b[39m  \u001b[91mC\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mT\u001b[39m  \u001b[91mG\u001b[39m  \u001b[35mU\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mG\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[96mA\u001b[39m  \n",
-      "Score: 2\n"
+      " 18.300361 seconds\n",
+      "Alignment Score: 3\n"
      ]
     }
    ],
    "source": [
-    "#Danamic programming\n",
-    "#seq1 = \"GATTACAAAAGGGGATTAC\"\n",
-    "#seq2 = \"GCATGCUATGGAAACGGCATGC\"\n",
-    "@time alignment = needleman_wunsch(seq1, seq2, match_score=1, mismatch_penalty=-1, gap_penalty=-1)\n",
-    "println(\"Alignment 1: \")\n",
-    "print_alignment(alignment[1], alignment[2])\n",
-    "println(\"Score: \", alignment[3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  3.312265 seconds\n",
-      "Alignment Score: 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Divide and conquer\n",
-    "seq1 = \"GATAATTAATTA\"\n",
-    "seq2 = \"GCATGUATGCTTA\"\n",
+    "# an example of divide and conquer function\n",
+    "seq1 = \"GATAATTAATTAA\"\n",
+    "seq2 = \"GCATGUATGCTTAA\"\n",
     "m = length(seq1)\n",
     "n = length(seq2)\n",
     "\n",
     "# Call the recursive alignment function\n",
     "@time alignment_score = sequence_alignment(seq1, seq2, m, n)\n",
     "println(\"Alignment Score: $alignment_score\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000016 seconds (50 allocations: 5.328 KiB)\n",
+      "\u001b[96mG\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mC\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mC\u001b[39m  \n",
+      "\u001b[96mG\u001b[39m  \u001b[91mC\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mC\u001b[39m  \u001b[91mU\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[91mG\u001b[39m  \u001b[91mG\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mC\u001b[39m  \n",
+      "Score: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# an example of Danamic programming function\n",
+    "seq1 = \"GATTACAAAAGGGGATTAC\"\n",
+    "seq2 = \"GCATGCUATGGAAACGGCATGC\"\n",
+    "@time alignment = needleman_wunsch(seq1, seq2, match_score=1, mismatch_penalty=-1, gap_penalty=-1)\n",
+    "print_alignment(alignment[1], alignment[2])\n",
+    "println(\"Score: \", alignment[3])"
    ]
   }
  ],
