--- a/factorial.ipynb
+++ b/factorial.ipynb
@@ -16,6 +16,7 @@
     }
    ],
    "source": [
+    "##### recursive function for factorial\n",
     "function factorial(n::Int)::Int\n",
     "    if n==0\n",
     "        return 1\n",
