--- a/fibonacci.ipynb
+++ b/fibonacci.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "fib_dq (generic function with 2 methods)"
+       "fib_dq (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -16,6 +16,7 @@
     }
    ],
    "source": [
+    "#### recursive function for fibonacci sequence\n",
     "function fib_dq(n::Int)::Int\n",
     "    if n==0 || n==1\n",
     "        return n\n",
@@ -26,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.786980 seconds\n"
+      "  2.759456 seconds\n"
      ]
     },
     {
@@ -52,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "fib_dp (generic function with 2 methods)"
+       "fib_dp (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -66,6 +67,8 @@
     }
    ],
    "source": [
+    "\n",
+    "### fibonacci function using dynamic programming approach\n",
     "function fib_dp(n::Int)::Int\n",
     "    temp1 = 0; temp2 = 1; new_item=0\n",
     "    if n==0 || n==1\n",
@@ -82,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000001 seconds\n"
+      "  0.000007 seconds\n"
      ]
     },
     {
