--- a/mergesort.ipynb
+++ b/mergesort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +16,8 @@
     }
    ],
    "source": [
+    "# merge sort algorithm \n",
+    "### Merge function\n",
     "function merge!(arr, temp, left_start, right_start, right_end)\n",
     "    left_end = right_start - 1\n",
     "    temp_index = left_start\n",
@@ -49,6 +51,7 @@
     "    end\n",
     "end\n",
     "\n",
+    "### The inplace merge sort function\n",
     "function merge_sort!(arr, temp, left_start, right_end)\n",
     "    if left_start >= right_end\n",
     "        return\n",
@@ -60,6 +63,7 @@
     "    merge!(arr, temp, left_start, middle + 1, right_end)\n",
     "end\n",
     "\n",
+    "### The main wrapper for the merge sort algorithm\n",
     "function merge_sort!(arr)\n",
     "    temp = similar(arr)\n",
     "    merge_sort!(arr, temp, 1, length(arr))\n",
@@ -68,19 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.059121 seconds (7.88 k allocations: 539.625 KiB, 99.88% compilation time)\n",
+      "  0.050757 seconds (7.88 k allocations: 539.625 KiB, 99.96% compilation time)\n",
       "[3, 5, 6, 6, 8, 9, 10, 11]"
      ]
     }
    ],
    "source": [
+    "### an example of sortin using merge sort\n",
     "a=[10, 3, 5, 6, 11, 6, 9, 8]\n",
     "@time merge_sort!(a)\n",
     "print(a)"
