--- a/hanoi.ipynb
+++ b/hanoi.ipynb
@@ -16,6 +16,7 @@
     }
    ],
    "source": [
+    "### The tower of hanoi recursive function \n",
     "function hanoi(a::Int, b::Int, c::Int, n::Int)\n",
     "    if n==1\n",
     "        print(\"$a ---> $c\\n\")\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
       "2 ---> 1\n",
       "2 ---> 3\n",
       "1 ---> 3\n",
-      "  0.021155 seconds (368 allocations: 15.344 KiB)\n"
+      "  0.015451 seconds (3.20 k allocations: 245.938 KiB, 45.08% gc time, 80.07% compilation time)\n"
      ]
     }
    ],
