--- a/fibonacci.ipynb
+++ b/fibonacci.ipynb
@@ -53,13 +53,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "fib_dp (generic function with 1 method)"
+       "fib_dp1 (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "### fibonacci function using dynamic programming approach\n",
+    "function fib_dp1(n::Int)::Int\n",
+    "    if n==0 || n==1\n",
+    "        return n\n",
+    "    end\n",
+    "    fibonacci=zeros(n+1)\n",
+    "    fibonacci[2]=1\n",
+    "    for i in 3:n+1\n",
+    "        fibonacci[i]=fibonacci[i-1]+fibonacci[i-2]\n",
+    "    end\n",
+    "    return fibonacci[n+1]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fib_dp2 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -68,8 +98,8 @@
    ],
    "source": [
     "\n",
-    "### fibonacci function using dynamic programming approach\n",
-    "function fib_dp(n::Int)::Int\n",
+    "### fibonacci function using dynamic programming approach without array\n",
+    "function fib_dp2(n::Int)::Int\n",
     "    temp1 = 0; temp2 = 1; new_item=0\n",
     "    if n==0 || n==1\n",
     "        return n\n",
@@ -85,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000007 seconds\n"
+      "  108.021 ns (1 allocation: 496 bytes)\n"
      ]
     },
     {
@@ -106,7 +136,33 @@
     }
    ],
    "source": [
-    "@time fib_dp(50)"
+    "@btime fib_dp1(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2.300 ns (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "12586269025"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime fib_dp2(50)"
    ]
   }
  ],
