--- a/Needleman–Wunsch.ipynb
+++ b/Needleman–Wunsch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
     "const MISMATCH_PENALTY = -1\n",
     "const GAP_PENALTY = -1\n",
     "\n",
-    "### Recursive sequence alignment function\n",
+    "### divide and conquer sequence alignment function\n",
     "function sequence_alignment(seq1::String, seq2::String, m::Int, n::Int)\n",
     "    # Base cases\n",
     "    if m == 0\n",
@@ -44,13 +44,12 @@
     "    deletion = sequence_alignment(seq1, seq2, m-1, n) + GAP_PENALTY\n",
     "\n",
     "    return max(match_mismatch, insertion, deletion)\n",
-    "end\n",
-    "\n"
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +158,7 @@
     "        else\n",
     "            print(magenta(string(align2[i])), \"  \")\n",
     "        end\n",
-    "        sleep(0.2)\n",
+    "        sleep(0.1)\n",
     "    end\n",
     "    println()\n",
     "end\n"
@@ -167,50 +166,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 18.300361 seconds\n",
-      "Alignment Score: 3\n"
+      "  6.694778 seconds\n",
+      "Alignment Score: 2\n"
      ]
     }
    ],
    "source": [
     "# an example of divide and conquer function\n",
-    "seq1 = \"GATAATTAATTAA\"\n",
+    "seq1 = \"GATAATTAATAA\"\n",
     "seq2 = \"GCATGUATGCTTAA\"\n",
     "m = length(seq1)\n",
     "n = length(seq2)\n",
     "\n",
-    "# Call the recursive alignment function\n",
     "@time alignment_score = sequence_alignment(seq1, seq2, m, n)\n",
     "println(\"Alignment Score: $alignment_score\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000016 seconds (50 allocations: 5.328 KiB)\n",
-      "\u001b[96mG\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mC\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mC\u001b[39m  \n",
-      "\u001b[96mG\u001b[39m  \u001b[91mC\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mC\u001b[39m  \u001b[91mU\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[91mG\u001b[39m  \u001b[91mG\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mC\u001b[39m  \n",
-      "Score: 2\n"
+      "  0.000019 seconds (102 allocations: 19.469 KiB)\n",
+      "\u001b[96mG\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mC\u001b[39m  \u001b[91mA\u001b[39m  \u001b[91mA\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mG\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[35mT\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mC\u001b[39m  \u001b[96mG\u001b[39m  \u001b[91mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[35mT\u001b[39m  \u001b[35mT\u001b[39m  \u001b[96mA\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mG\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[96mA\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mC\u001b[39m  \u001b[96mC\u001b[39m  \u001b[35mT\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mT\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mT\u001b[39m  \n",
+      "\u001b[96mG\u001b[39m  \u001b[91mC\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[96mT\u001b[39m  \u001b[35mG\u001b[39m  \u001b[96mC\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[35mU\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[35mT\u001b[39m  \u001b[96mG\u001b[39m  \u001b[96mG\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91m-\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mC\u001b[39m  \u001b[96mG\u001b[39m  \u001b[91m-\u001b[39m  \u001b[91m-\u001b[39m  \u001b[35mG\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mA\u001b[39m  \u001b[35mT\u001b[39m  \u001b[96mG\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mT\u001b[39m  \u001b[96mT\u001b[39m  \u001b[96mA\u001b[39m  \u001b[35mA\u001b[39m  \u001b[96mG\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mC\u001b[39m  \u001b[96mC\u001b[39m  \u001b[35mC\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[96mA\u001b[39m  \u001b[91mT\u001b[39m  \u001b[91mG\u001b[39m  \u001b[96mT\u001b[39m  \u001b[91mG\u001b[39m  \u001b[91mC\u001b[39m  \u001b[91mC\u001b[39m  \u001b[91mG\u001b[39m  \u001b[91mG\u001b[39m  \u001b[96mT\u001b[39m  \n",
+      "Score: -2\n"
      ]
     }
    ],
    "source": [
     "# an example of Danamic programming function\n",
-    "seq1 = \"GATTACAAAAGGGGATTAC\"\n",
-    "seq2 = \"GCATGCUATGGAAACGGCATGC\"\n",
+    "seq1 = \"GATTACAAAAGGGGATTACGATTTACGATTAGGGCCTAAATT\"\n",
+    "seq2 = \"GCATGCUATGGAAACGGCATGCTTAAGCCCCAAATGTGCCGGT\"\n",
+    "\n",
     "@time alignment = needleman_wunsch(seq1, seq2, match_score=1, mismatch_penalty=-1, gap_penalty=-1)\n",
     "print_alignment(alignment[1], alignment[2])\n",
     "println(\"Score: \", alignment[3])"
