variables names update

--- a/tower_of_hanoi.ipynb
+++ b/tower_of_hanoi.ipynb
@@ -17,61 +17,22 @@
    ],
    "source": [
     "### The tower of hanoi recursive function \n",
-    "function hanoi(a::Int, b::Int, c::Int, n::Int)\n",
+    "function hanoi(source::Int, auxiliary::Int, destination::Int, n::Int)\n",
     "    if n==1\n",
-    "        print(\"$a ---> $c\\n\")\n",
+    "        print(\"$source ---> $destination\\n\")\n",
     "    else\n",
-    "        hanoi(a, c, b, n-1)\n",
-    "        print(\"$a ---> $c\\n\")\n",
-    "        hanoi(b, a, c, n-1)\n",
+    "        hanoi(source, destination, auxiliary, n-1)\n",
+    "        print(\"$source ---> $destination\\n\")\n",
+    "        hanoi(auxiliary, source, destination, n-1)\n",
     "    end\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 ---> 3\n",
-      "1 ---> 2\n",
-      "3 ---> 2\n",
-      "1 ---> 3\n",
-      "2 ---> 1\n",
-      "2 ---> 3\n",
-      "1 ---> 3\n",
-      "1 ---> 2\n",
-      "3 ---> 2\n",
-      "3 ---> 1\n",
-      "2 ---> 1\n",
-      "3 ---> 2\n",
-      "1 ---> 3\n",
-      "1 ---> 2\n",
-      "3 ---> 2\n",
-      "1 ---> 3\n",
-      "2 ---> 1\n",
-      "2 ---> 3\n",
-      "1 ---> 3\n",
-      "2 ---> 1\n",
-      "3 ---> 2\n",
-      "3 ---> 1\n",
-      "2 ---> 1\n",
-      "2 ---> 3\n",
-      "1 ---> 3\n",
-      "1 ---> 2\n",
-      "3 ---> 2\n",
-      "1 ---> 3\n",
-      "2 ---> 1\n",
-      "2 ---> 3\n",
-      "1 ---> 3\n",
-      "  0.015451 seconds (3.20 k allocations: 245.938 KiB, 45.08% gc time, 80.07% compilation time)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@time hanoi(1, 2, 3, 5)"
    ]
